update clean code best practive