@@ -6,15 +6,14 @@ import com.xxxx.systemvotting.modules.poll.dto.PollCreateRequestDTO;
 import com.xxxx.systemvotting.modules.poll.dto.PollResponseDTO;
 import com.xxxx.systemvotting.modules.poll.entity.Option;
 import com.xxxx.systemvotting.modules.poll.entity.Poll;
+import com.xxxx.systemvotting.modules.poll.entity.Tag;
+import com.xxxx.systemvotting.modules.user.dto.UserResponseDTO;
 import com.xxxx.systemvotting.modules.user.mapper.UserMapper;
-import org.mapstruct.AfterMapping;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
-import org.mapstruct.MappingTarget;
 
-import com.xxxx.systemvotting.modules.poll.entity.Tag;
-
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -22,30 +21,26 @@ import java.util.stream.Collectors;
 @Mapper(componentModel = MappingConstants.ComponentModel.SPRING, uses = { UserMapper.class })
 public interface PollMapper {
 
-    @Mapping(target = "id", ignore = true)
-    @Mapping(target = "createdAt", ignore = true)
-    @Mapping(target = "updatedAt", ignore = true)
-    @Mapping(target = "creator", ignore = true) // Will be mapped in Service
-    @Mapping(target = "options", ignore = true) // Custom handling to maintain bidirectional relation
-    @Mapping(target = "tags", ignore = true) // Will be mapped in Service
-    @Mapping(target = "isAnonymous", source = "anonymous")
+    @Mapping(target = "id",         ignore = true)
+    @Mapping(target = "createdAt",  ignore = true)
+    @Mapping(target = "updatedAt",  ignore = true)
+    @Mapping(target = "creator",    ignore = true)   // set in service
+    @Mapping(target = "options",    ignore = true)   // bidirectional relation, set in service
+    @Mapping(target = "tags",       ignore = true)   // set in service
+    @Mapping(target = "isAnonymous", source = "isAnonymous")
     Poll toEntity(PollCreateRequestDTO dto);
 
+    /**
+     * Maps Poll entity → PollResponseDTO.
+     * Anonymous-poll masking and Redis vote enrichment are handled in the service layer.
+     */
     PollResponseDTO toDto(Poll entity);
-
-    @AfterMapping
-    default void maskAnonymous(Poll poll, @MappingTarget PollResponseDTO dto) {
-        if (poll != null && poll.isAnonymous() && dto.getCreator() != null) {
-            dto.getCreator().setUsername("Anonymous");
-            dto.getCreator().setAvatarUrl(null);
-        }
-    }
 
     List<PollResponseDTO> toDtoList(List<Poll> entities);
 
-    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "id",        ignore = true)
     @Mapping(target = "voteCount", ignore = true)
-    @Mapping(target = "poll", ignore = true)
+    @Mapping(target = "poll",      ignore = true)
     Option toOptionEntity(OptionRequestDTO dto);
 
     OptionResponseDTO toOptionDto(Option entity);
@@ -53,9 +48,7 @@ public interface PollMapper {
     List<OptionResponseDTO> toOptionDtoList(Set<Option> entities);
 
     default List<String> mapTagsToStrings(Set<Tag> tags) {
-        if (tags == null) {
-            return java.util.Collections.emptyList();
-        }
+        if (tags == null) return List.of();
         return tags.stream()
                 .map(Tag::getName)
                 .collect(Collectors.toList());
